# GongBuddy

./: .gitmodules  README.md
hardware/: GongBuddy  (+15 more)
software/: CMakeLists.txt  README.md  generate_build.sh
software/.metadata/: .log4j.xml  version.ini
software/.metadata/.plugins/org.eclipse.cdt.core/: STSW-STLKT01-DataLog.language.settings.xml  test.language.settings.xml  test2.language.settings.xml
software/.metadata/.plugins/org.eclipse.core.resources/.projects/STSW-STLKT01-DataLog/: .location  .markers
software/.metadata/.plugins/org.eclipse.core.resources/.projects/STSW-STLKT01-DataLog/.indexes/: properties.index
software/.metadata/.plugins/org.eclipse.core.resources/.projects/test2/: .location  .markers
software/.metadata/.plugins/org.eclipse.core.resources/.projects/test2/.indexes/: properties.index
software/.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
software/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
software/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
software/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
software/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
software/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
software/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
software/STSW-STLKT01_V2.4.0/: Release_Notes.html  package.xml
software/STSW-STLKT01_V2.4.0/Drivers/BSP/Components/sx1276/: sx1276.c
software/STSW-STLKT01_V2.4.0/Drivers/BSP/SX1276MB1LAS/: sx1276mb1las.c
software/STSW-STLKT01_V2.4.0/Drivers/BSP/SensorTile/: SensorTile.c  SensorTile.h  SensorTile_audio.h  SensorTile_sd.c
software/STSW-STLKT01_V2.4.0/Drivers/CMSIS/: .gitignore
software/STSW-STLKT01_V2.4.0/Drivers/CMSIS/Device/ST/STM32L4xx/: Release_Notes.md
software/STSW-STLKT01_V2.4.0/Middlewares/ST/BlueNRG-MS/: .gitignore
software/STSW-STLKT01_V2.4.0/Projects/SensorTile/Applications/DataLog/: readme.txt
software/STSW-STLKT01_V2.4.0/Projects/SensorTile/Applications/DataLog/Inc/: FreeRTOSConfig.h  SensorTile_conf.h  commandline.h  common_structs.h  cube_hal.h  datalog_application.h  hts221_settings.h  hw.h  hw_gpio.h  lps22hb_settings.h  lsm303agr_settings.h  lsm6dsm_settings.h  main.h  mcp23008_i2c_expander.h  pingpong.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  usbd_cdc_interface.h  utilities_conf.h  vcom.h
software/application/: CMakeLists.txt
software/application/inc/: gong_io.h  mcp23S08.h  sensor_io.h  user_tasks.h  utilities_conf.h
software/application/inc/lora/: hw.h  hw_conf.h
software/application/inc/test/: gong_io_test.h
software/application/src/: gong_io.c  mcp23S08.c  sensor_io.c  user_tasks.c  user_tasks.cpp
software/application/src/test/: gong_io_test.c
software/cubemx/: .mxproject  CMakeLists.txt  Makefile  STM32L476JGYx_FLASH.ld  cubemx.ioc
software/cubemx/Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
software/cubemx/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c
software/cubemx/Drivers/BSP/Components/sx1276/: sx1276.c  sx1276.h
software/cubemx/USB_DEVICE/App/: usbd_cdc_if.c
software/drivers/: CMakeLists.txt
software/fwimages/: CMakeLists.txt
software/imagegen/: CMakeLists.txt
software/imagegen/include/appareo/imagegen/: LzmaDeflate.h
software/imagegen/src/: main.cpp
software/imagegen/src/appareo/imagegen/: LzmaDeflate.cpp
software/libbuildinfo/: CMakeLists.txt
software/libbuildinfo/include/: BuildConstants.h
software/libbuildinfo/src/: BuildConstants.c
software/libcomms/: CMakeLists.txt
software/libcomms/include/: Irfcomms.h  comm_mngr.h  rfcomms.h
software/libcomms/src/: comm_mngr.cpp  rfcomms.cpp
software/libupdate/: CMakeLists.txt
software/libupdate/include/crc/: Crc32.h
software/libupdate/include/firmware/: ApplicationHeader.h  FWUpdate.h  IFlash.h  ImageHeader.h  LzmaDeflate.h  LzmaInflate.h
software/libupdate/src/crc/: Crc32.c
software/libupdate/src/firmware/: ApplicationHeader.cpp  FWUpdate.cpp  ImageHeader.cpp  LzmaDeflate.cpp  LzmaInflate.cpp
software/libupdate/src/lzma/: LzmaDec.c
software/libutility/: CMakeLists.txt
software/libutility/include/: Crc32.h  ITimer.h  Timer.h
software/libutility/src/: Crc32.cpp  Timer.cpp
software/linker/: STM32L476RGTx_FLASH.ld
software/messages/: CMakeLists.txt  gb_messages.options  gb_messages.pb.c  gb_messages.pb.cc  gb_messages.pb.h  gb_messages.proto  gb_messages_pb2.py  gb_test_data.csv  gen_pb.sh  test_pb.py
software/middleware/: CMakeLists.txt
software/python/: adafruit_rfm9x.py  gb_messages_pb2.py  lora2mongo.py  lora2zmq.py  ui.py
software/scripts/: buildserver.sh  create_app_update_image.sh  create_bb_update_image.sh  debug_application.sh  debug_bootblock.sh  gdbinit_local  program_assembly.sh  program_debug_app.sh  set_paths.sh  start_gdb_server.sh
software/test2/: .cproject  .mxproject  .project  STM32L476JGYX_FLASH.ld  test2.ioc  test2.launch
software/test2/Core/Inc/: FreeRTOSConfig.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
software/test2/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
software/test2/Debug/: makefile  objects.list  sources.mk
software/test2/Debug/Core/Src/: subdir.mk
software/test2/Debug/Core/Startup/: subdir.mk
software/test2/Debug/Drivers/STM32L4xx_HAL_Driver/Src/: subdir.mk
software/test2/Debug/FATFS/App/: subdir.mk
software/test2/Debug/USB_DEVICE/App/: subdir.mk  usb_device.d  usbd_desc.d
software/test2/USB_DEVICE/App/: usb_device.c  usbd_desc.c  usbd_storage_if.c
software/toolchain/: arm_embedded_toolchain.txt
software/ut/: CMakeLists.txt
software/ut/data/: app.image
software/ut/include/appareo/abercrombie/sensors/: MockGainController.h
software/ut/include/appareo/micro/interface/: MockAnalogs.h  MockCapture.h  MockTimer.h
software/ut/src/: ApplicationHeader_ut.cpp  Crc32_ut.cpp  FWUpdate_ut.cpp  ImageHeader_ut.cpp  RFComms_ut.cpp  comm_mngr_ut.cpp  nanopb_ut.cpp
software/ut/src/mocks/: IFlash_mock.h  ITimer_mock.h  rfcomms_mock.h
(+49 files in other folders)
